[gd_scene load_steps=5 format=3 uid="uid://drr2t8xomgkra"]

[ext_resource type="Script" path="res://scripts/UI/item_info.gd" id="1_pr0sc"]

[sub_resource type="Animation" id="Animation_n2qtf"]
resource_name = "Normal"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NewItemLabel:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(1.3, 1.3), Vector2(0.7, 0.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NewItemLabel2:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(1.3, 1.3), Vector2(0.7, 0.7)]
}

[sub_resource type="Animation" id="Animation_blvn5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NewItemLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.7, 0.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NewItemLabel2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.7, 0.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w060p"]
_data = {
"Normal": SubResource("Animation_n2qtf"),
"RESET": SubResource("Animation_blvn5")
}

[node name="ItemInfo" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 30.0
offset_right = -48.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(104, 58.5)
script = ExtResource("1_pr0sc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="ItemPreview" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 4

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Item Name"
horizontal_alignment = 1

[node name="ItemPreview2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 4

[node name="Description" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
text = "Item Description"
horizontal_alignment = 1

[node name="OkButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Ok!"

[node name="FreeControls" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="NewItemLabel" type="Label" parent="FreeControls"]
layout_mode = 2
offset_left = -45.0
offset_top = -13.0
offset_right = 35.0
offset_bottom = 4.0
rotation = -0.523598
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(40, 7.5)
text = "New Item!"

[node name="NewItemLabel2" type="Label" parent="FreeControls"]
layout_mode = 2
offset_left = 161.0
offset_top = -13.0
offset_right = 241.0
offset_bottom = 4.0
rotation = 0.523598
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(40, 7.5)
text = "New Item!"

[node name="NewItemsLabelAnim" type="AnimationPlayer" parent="FreeControls"]
libraries = {
"": SubResource("AnimationLibrary_w060p")
}
autoplay = "Normal"

[connection signal="pressed" from="VBoxContainer/OkButton" to="." method="close"]
